<resources>
    <string name="app_name">Acronymism</string>
    <string name="search">Search</string>
    <string name="meaning">Meaning</string>
    <string name="frequency">Frequency</string>
    <string name="since">Since</string>
    <string name="please_type_here_to_search">Please type here to search</string>
    <string name="short_form">Short Form</string>
    <string name="long_form">Long Form</string>
    <string name="error_string">An error occurred, Please try again.</string>
    <string name="error_title">Error</string>
    <string name="no_results_found">No results found!</string>
    <string name="no_results_found_title">Oops</string>
    <string name="invalid_search">Please enter text to search</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
</resources>